add db and some forms

--- a/YumBlazor/appsettings.Development.json
+++ b/YumBlazor/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=YumBlazor;User Id=sa;Password=@P@ssw0rd@;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+  },
+  "DetailedErrors": true
 }
