--- a/YumBlazor/appsettings.json
+++ b/YumBlazor/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=Data\\app.db;Cache=Shared"
+    "DefaultConnection": "Server=localhost;Database=YumBlazor;User Id=sa;Password=@P@ssw0rd@;MultipleActiveResultSets=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DetailedErrors": true
 }
